Add .gitignore for Angular 14

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-angular20-app",
   "version": "0.0.0",
   "scripts": {
+     "start": "node server.js",
+    "build": "ng build --configuration production",
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "prettier": {
     "printWidth": 100,
