--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-angular20-app",
   "version": "0.0.0",
   "scripts": {
-     "start": "node server.js",
+    "start": "node server.js",
     "build": "ng build --configuration production",
     "ng": "ng",
     "watch": "ng build --watch --configuration development",
@@ -31,6 +31,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "express": "^5.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
