changes for package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "ng build --configuration production",
+    "postinstall": "npm run build"
     "ng": "ng",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
